--- a/src/sass/_search.scss
+++ b/src/sass/_search.scss
@@ -1,7 +1,7 @@
 :root {
     --timing-function: cubic-bezier(0.4, 0, 0.2, 1);
     --animation-duration: 250ms;
-    overflow-x: hidden;
+    // overflow-x: hidden;
 }
 
 .form-section {
@@ -177,7 +177,7 @@
 
 @keyframes load {
     100% {
-        transform: translateX(100%);
+        transform: translateX(0%);
     }
 }
 
